--- a/index.html
+++ b/index.html
@@ -22,40 +22,14 @@
             <img id="example" src="public/images/example.png" alt="example">
         </figure>
     </div>
+    <div class="fifth-mov">
+        <p class="abstract">Há uma série de softwares hoje em dia que possuem suporte ao Kerberos através de bibliotecas e pacotes, onde entre elas encontram-se os servidores Apache, Apache 2 e Samba, roteadores e switches Cisco, sistemas operacionais Windows e MAC OS X, dentre outros.</p>
+    </div>
+    <div class="sixth-mov">
+        <p class="abstract">Atualmente ele está na versão 5 e suas padronizações podem ser encontradas na RFC 4120, que surgiu como atualização da RFC 1510 onde localizam-se as especificações da versão 4 do protocolo.</p>
+    </div>
 </body>
 
-<script type="text/javascript">
-    $(document).ready(function(){
-        $(function(){
-            $('.first-mov').click(
-                function(){
-                    $('.first-mov').fadeOut(300, function(){
-                        $('.second-mov').fadeIn(3000);
-                    });
-                }
-            );
-            $('.second-mov').click(
-                function(){
-                    $('.second-mov').fadeOut(300, function(){
-                        $('.third-mov').fadeIn(3000);
-                    });
-                }
-            );
-            $('.third-mov').click(
-                function(){
-                    $('.third-mov').fadeOut(300, function(){
-                        $('.fourth-mov').fadeIn(3000);
-                    });
-                }
-            );
-            $('.fourth-mov').click(
-                function(){
-                    $('.fourth-mov').fadeOut(300, function(){
-                        $('.first-mov').fadeIn(3000);
-                    });
-                }
-            );
-        });
-    });
-</script>
+<script type="text/javascript" src="assets/js/transition.js"></script>
+
 </html>
