--- a/index.html
+++ b/index.html
@@ -15,37 +15,20 @@
         </div>
     </div>
     <div class="starting">
-        <div class="first-arrow hidden">
-            <div class="arrow-left-down">
-                <label class="key-word">
-                    <strong>Segurança Corporativa</strong>
-                </label>
-                <img src="public/images/arrow-down-left.png">
-            </div>
+        <div id="security" class="hidden">
+            <label class="key-word">
+                <strong>Segurança Corporativa</strong>
+            </label>
         </div>
-        <div class="second-arrow hidden">
-            <div class="arrow-right-down">
-                <img src="public/images/arrow-down-right.png">
-                <label class="key-word">
-                    <strong>Criptografia de Dados</strong>
-                </label>
-            </div>
+        <div id="cryptography" class="hidden">
+            <label class="key-word">
+                <strong>Criptografia de Dados</strong>
+            </label>
         </div>
-        <div class="third-arrow hidden">
-            <div class="arrow-left">
-                <label class="key-word">
-                    <strong>Controle de Acesso aos Usuários</strong>
-                </label>
-                <img src="public/images/arrow-left.png">
-            </div>
-        </div>
-        <div class="fourth-arrow hidden">
-            <div class="arrow-right"> 
-                <img src="public/images/arrow-right.png">
-                <label class="key-word">
-                    <strong>Meio de Campo entre Cliente e Servidor</strong>
-                </label>
-            </div>
+        <div id="access_control" class="hidden">
+            <label class="key-word">
+                <strong>Controle de Acesso aos Usuários</strong>
+            </label>
         </div>
         <div class="presentation hidden">
             <button id="present" class="btn btn-lg btn-light">
@@ -76,11 +59,20 @@
         <p class="abstract">Atualmente ele está na versão 5 e suas padronizações podem ser encontradas na RFC 4120, que surgiu como atualização da RFC 1510 onde localizam-se as especificações da versão 4 do protocolo.</p>
     </div>
     <div class="login-form">
-        <div class="form-control">
-            <label class="col-lg-7" id="login-form-link">Login</label>
-            <input type="text" name="username" id="username" tabindex="2" class="col-lg-7" placeholder="Username" value="">
-            <input type="password" name="password" id="password" tabindex="2" class="col-lg-7" placeholder="Password">
-            <input type="submit" name="login-submit" id="login_submit" tabindex="4" class="col-lg-7 btn btn-primary" value="Log In">
+        <div class="appear">
+            <div class="form-position">
+                <label id="login_text" for="username">Exemplo de Login com Kerberos atuando</label>
+            </div>
+            <div class="form-position">
+                <label for="username">User: </label>
+                <input type="text" id="username" >
+            <div class="form-position">
+                <label for="password">Pass: </label>
+                <input type="password" id="password" >
+            </div>
+            <div class="form-position">
+                <input type="submit" id="login_submit" tabindex="4" class="btn btn-primary" value="LOG IN">
+            </div>
         </div>
     </div>
 </body>
