adjusting text layout

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Kerberos Animation</title>
+    <link rel="icon" href="public/images/kerberos.ico" type="image/x-icon">
     <script src="node_modules/jquery/dist/jquery.min.js" ></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -39,7 +40,7 @@
         </div>
     </div>
     <div class="first-mov">
-        <label class="lets-start">Kerberos</label>
+        <label class="lets-start"><strong>KERBEROS</strong></label>
     </div>
     <div class="second-mov">
         <div class="logo-align">
@@ -49,7 +50,9 @@
         </div>
     </div>
     <div class="third-mov">
-        <p class="abstract">Kerberos é um protocolo de autenticação de rede desenvolvido em meados dos anos 80 no Instituto de Tecnologia de Massachusetts (MIT). Sua principal função é prover maior segurança para aplicações cliente-servidor através de uma chave secreta criptografada.</p>
+        <p class="abstract">
+            <strong>Kerberos é um protocolo de autenticação de rede que tem como principal função prover maior segurança para aplicações cliente-servidor através de uma chave secreta criptografada.</strong>
+        </p>
     </div>
     <div class="fourth-mov">
         <div class="logo-align">
@@ -59,22 +62,32 @@
         </div>
     </div>
     <div class="fifth-mov">
-        <p class="abstract">Há uma série de softwares hoje em dia que possuem suporte ao Kerberos através de bibliotecas e pacotes, onde entre elas encontram-se os servidores Apache, Apache 2 e Samba, roteadores e switches Cisco, sistemas operacionais Windows e MAC OS X, dentre outros.</p>
+        <p class="abstract">
+            <strong>Há uma série de softwares hoje em dia que possuem suporte ao Kerberos através de bibliotecas e pacotes, como os servidores Apache, Apache 2 e Samba, roteadores e switches Cisco, sistemas operacionais Windows Server e MAC OS X, dentre outros.</strong>
+        </p>
     </div>
     <div class="sixth-mov">
-        <p class="abstract">Atualmente ele está na versão 5 e suas padronizações podem ser encontradas na RFC 4120, que surgiu como atualização da RFC 1510 onde localizam-se as especificações da versão 4 do protocolo.</p>
+        <p class="abstract">
+            <strong>Atualmente ele está na versão 5 e suas padronizações podem ser encontradas na RFC 4120, que surgiu como atualização da RFC 1510 da versão 4 do protocolo.</strong>
+        </p>
     </div>
     <div class="login-form">
         <div class="appear">
             <div class="form-position">
-                <label id="login_text" for="username">Exemplo de Login com Kerberos atuando</label>
+                <label id="login_text" for="username">
+                    <strong>Exemplo de Login com Kerberos atuando</strong>
+                </label>
             </div>
             <div class="form-position">
-                <label for="username">User: </label>
+                <label for="username">
+                    <strong>User: </strong>
+                </label>
                 <input type="text" id="username" >
             </div>
             <div class="form-position">
-                <label for="password">Pass: </label>
+                <label for="password">
+                    <strong>Pass: </strong>
+                </label>
                 <input type="password" id="password" >
             </div>
             <div class="form-position">
