login information access

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
         </div>
     </div>
     <div class="access-key">
-        <p class="abstract">No momento em que é efetuado o acesso em sistema com as credenciais disponibilizadas ou criadas por um administrador, o Kerberos entra em ação e verifica essas informações junto a um servidor, onde comumente é utilizado o Active Directory (AD), que é o diretório responsável por conter os usuários ativos no sistema e que é utilizado em sistemas Windows Server.</p>
+        <p class="abstract">
+            <strong>No momento em que é efetuado o acesso em sistema com as credenciais disponibilizadas ou criadas por um administrador, o Kerberos entra em ação e verifica essas informações junto a um servidor, onde comumente é utilizado o Active Directory (AD), que é o diretório responsável por conter os usuários ativos no sistema e que é utilizado em sistemas Windows Server.</strong>
+        </p>
     </div>
 </body>
-
 <script type="text/javascript" src="assets/js/transition.js"></script>
-
 </html>
