ticket granting transition

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
             <strong>No momento em que é efetuado o acesso em sistema com as credenciais disponibilizadas ou criadas por um administrador, o Kerberos entra em ação e verifica essas informações junto a um servidor, onde comumente é utilizado o Active Directory (AD), que é o diretório responsável por conter os usuários ativos no sistema e que é utilizado em sistemas Windows Server.</strong>
         </p>
     </div>
+    <div class="ticket-grant">
+        <div class="abstract">
+            <p class="encrypt-system">
+                <strong>O Kerberos trabalha com um sistema de segurança conhecido como "Ticket to Get Ticket", ou TGT. Ele é um arquivo de configuração criptografado que permite acesso a um determinado serviço.</strong>
+            </p>
+            <div class="grant-service">
+                <button id="how_works" class="btn btn-lg btn-light">
+                    <strong>Como esse ticket é liberado?</strong>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 <script type="text/javascript" src="assets/js/transition.js"></script>
 </html>
