creating loading bar

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
             </div>
         </div>
     </div>
+    <div class="searching-grant">
+        <div class="progress">
+            <div id="bar" class="progress-size progress-bar bg-dark active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    </div>
 </body>
 <script type="text/javascript" src="assets/js/transition.js"></script>
 </html>
