--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
             <div id="bar" class="progress-size progress-bar bg-dark active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
+    <div class="granted">
+        <p class="abstract">
+            <strong>Esse período de aguardo, que normalmente conhecemos como a mensagem de "Bem-vindo" seguido de um loading no Windows, é a etapa onde o Kerberos está verificando suas credenciais junto ao servidor e liberando seu acesso ao domínio.</strong>
+        </p>
+    </div>
 </body>
 <script type="text/javascript" src="assets/js/transition.js"></script>
 </html>
