--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 <label for="username">
                     <strong>User: </strong>
                 </label>
-                <input type="text" id="username" >
+                <input type="text" class="text-input-size" id="username" >
             </div>
             <div class="form-position">
                 <label for="password">
                     <strong>Pass: </strong>
                 </label>
-                <input type="password" id="password" >
+                <input type="password" class="text-input-size" id="password" >
             </div>
             <div class="form-position">
                 <input type="submit" id="login_submit" class="btn btn-primary" value="LOG IN">
@@ -161,10 +161,35 @@
             </div>
         </div>
     </div>
-    <div class="developing">
-        <p class="abstract">
-            <strong>Em desenvolvimento.</strong>
-        </p>
+    <div class="krbconf">
+        <!-- Configuration File Image -->
+    </div>
+    <div class="connect-ad">
+        <!-- Active Directory Connection Text -->
+    </div>
+    <div class="working">
+        <!-- Print Screen AD Kerberos Working Image -->
+    </div>
+    <div class="kerberize-info">
+        <!-- Kerberize Simplifying Text -->
+    </div>
+    <div class="kerberize">
+        <!-- Kerberize Flow Image -->
+    </div>
+    <div class="practice">
+        <!-- Practice Activity Captched Video -->
+    </div>
+    <div class="hash-captched">
+        <!-- Hash Collected From Kerberos With SQL Server Text -->
+    </div>
+    <div class="conclusion">
+        <!-- Conclusion About the Task Text -->
+    </div>
+    <div class="references">
+        <!-- Bibliography References Utilized Text -->
+    </div>
+    <div class="project-group">
+        <!-- Project Classmates Information -->
     </div>
 </body>
 <script type="text/javascript" src="assets/js/transition.js"></script>
