krb5.conf, ad connection and kerberize application

--- a/index.html
+++ b/index.html
@@ -162,19 +162,46 @@
         </div>
     </div>
     <div class="krbconf">
-        <!-- Configuration File Image -->
+        <div class="logo-align">
+            <figure>
+                <img id="krb5_conf" src="public/images/krb5_conf.png">
+            </figure>
+        </div>
     </div>
     <div class="connect-ad">
-        <!-- Active Directory Connection Text -->
+        <p class="abstract">
+            <strong>Quando configurado corretamente, o Kerberos comunica-se automaticamente com o AD através de habilitação manual no Windows Server, onde essa permissão é liberada na pasta “inetsrv”, que fica localizada no System32 e necessita ser acessada com condições de administrador. Essa pasta é responsável por configurar o sistema de autenticação do Windows.</strong>
+        </p>
     </div>
     <div class="working">
-        <!-- Print Screen AD Kerberos Working Image -->
+        <div class="logo-align">
+            <figure>
+                <img id="ad_connection" src="public/images/kdc_working.jpg">
+            </figure>
+        </div>
     </div>
     <div class="kerberize-info">
-        <!-- Kerberize Simplifying Text -->
+        <div class="abstract">
+            <p class="reasons">
+                <strong>Um dos motivos por se considerar o Kerberos uma ferramenta completa de se utilizar é quando se opta por migrar um servidor que utiliza outro método de autenticação para utilizar o Kerberos. Essa transferência é conhecida como Kerberizar a aplicação e consiste em algumas mudanças para o seu pleno funcionamento:</strong>
+            </p>
+            <p class="topic">
+            <strong>- Buscar as informações de dados de usuários já existentes no sistema;</strong>
+            </p>
+            <p class="topic">
+            <strong>- Cachear essas informações de modo a tornar a requisição mais eficiente;</strong>
+            </p>
+            <p class="topic">
+            <strong>- Verificar os tickets já solicitados pelos usuários para evitar que tenha de ser repetido o processo para cada serviço já disponibilizado;</strong>
+            </p>
+        </div>
     </div>
     <div class="kerberize">
-        <!-- Kerberize Flow Image -->
+        <div class="logo-align">
+            <figure>
+                <img id="kerberize_app" src="public/images/kerberize.png">
+            </figure>
+        </div>
     </div>
     <div class="practice">
         <!-- Practice Activity Captched Video -->
