--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
             </figure>
         </div>
     </div>
+    <div class="practice">
+        <div class="logo-align">
+            <video width="90%" height="800vh" controls>
+                <source src="/public/videos/kerberos-working.webm" type="video/webm">
+            </video>
+        </div>
+    </div>
     <div class="conclusion">
         <div class="abstract">
             <p class="finishing">
